--- a/index.html
+++ b/index.html
@@ -7,9 +7,23 @@
 
 <body>
     <script type="module">
-        import RateLimiter from "./dist/rate-limitation.esm.js"; var rateLimiter = new RateLimiter(1); const asyncAdd = function() { const args = Array.from(arguments); return new Promise((resolve) => { setTimeout(() => resolve(args.reduce((a, b) => a + b, 0)),
-        2000); }) }; asyncAdd(1, 2).then(console.log); asyncAdd(1, 2).then(console.log); asyncAdd(1, 2).then(console.log); rateLimiter.enqueue(asyncAdd, this, 1, 2, 3, 4, 5).then(console.log); rateLimiter.enqueue(asyncAdd, this, 1, 2, 3, 4, 5).then(console.log);
-        rateLimiter.enqueue(asyncAdd, this, 1, 2, 3, 4, 5).then(console.log);
+        import RateLimiter from "./dist/rate-limitation.esm.js"; 
+        const asyncAdd = (...args) => {
+            // a very long and useful async task
+            return new Promise(resolve => {
+                setTimeout(() => {
+                    const result = args.reduce((a, b) => { return a + b; }, 0);
+                    console.log(result);
+                    resolve(result);
+                }, 5000);
+            });
+        };
+
+        const rateLimiter = new RateLimiter(2);
+        rateLimiter.enqueue(asyncAdd, this, 1,2,3,4,5);
+        rateLimiter.enqueue(asyncAdd, this, 1,2,3,4,5);
+        rateLimiter.enqueue(asyncAdd, this, 1,2,3,4,5); // this will be executed after 5000ms
+        rateLimiter.enqueue(asyncAdd, this, 1,2,3,4,5); // this will be executed after 5000ms
     </script>
 </body>
 
